1. Actualizada gestión de libros y pequeños retoques

--- a/biblioteca/app/views/author/edit.html.erb
+++ b/biblioteca/app/views/author/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editar Autor</h1>
 
-<%= form_for :autor, :url => { :action => :update, :id => @author.id },
+<%= form_for :author, :url => { :action => :update, :id => @author.id },
              :method => :put do |f| %>
     <p>
       <%= f.label :nombre %><br>
