--- a/biblioteca/app/views/author/new.html.erb
+++ b/biblioteca/app/views/author/new.html.erb
@@ -1,5 +1,5 @@
 <h1>Nuevo Autor</h1>
-<%= form_for :autor, :url => { :action => :create } do |f| %>
+<%= form_for :author, :url => { :action => :create } do |f| %>
     <p>
       <%= f.label :nombre %><br>
       <%= f.text_field :nombre %>
