--- a/biblioteca/app/views/author/index.html.erb
+++ b/biblioteca/app/views/author/index.html.erb
@@ -14,6 +14,7 @@
   <% @author.each do |author| %>
       <tr>
         <td><%= author.nombre %></td>
+        <td><%= author.apellidos %></td>
         <td><%= link_to 'Ver Autor', :action => :show, :id => author.id %></td>
         <td><%= link_to 'Editar', :action => :edit, :id => author.id %></td>
         <td><%= link_to 'Eliminar', { :action => :destroy, :id => author.id }, :method => :delete, :data => { :confirm => '¿Estas seguro?' } %></td>
@@ -22,4 +23,4 @@
   </tbody>
 </table>
 
-<%= link_to 'Atrás', author_index_path %>
+<%= link_to 'Libros', book_index_path %>
